# sg-uni-application-model

./: README.md  pyproject.toml  sg-uni-model.ipynb
data/: 2022-NTU.csv  2022-NUS.csv  2022-SMU.csv  2023-NTU.csv  2023-NUS.csv  2023-SMU.csv
notebooks/: sg-uni-model.ipynb
