[project]
name = "sg-uni-application-model"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "wuihee", email = "wuihee@gmail.com"},
]
dependencies = [
    "numpy>=2.0.0",
    "matplotlib>=3.9.0",
    "pandas>=2.2.2",
    "scikit-learn>=1.5.1",
    "jupyter>=1.0.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
